--- a/public/about/index.html
+++ b/public/about/index.html
@@ -117,26 +117,26 @@ Setup Some fun facts about Hugo:
 <p>It makes use of a variety of open source projects including:</p>
 
 <ul>
-<li><a href="https://github.com/spf13/cobra">Cobra</a></li>
-<li><a href="https://github.com/spf13/viper">Viper</a></li>
-<li><a href="https://github.com/spf13/jWalterWeatherman">J Walter Weatherman</a></li>
-<li><a href="https://github.com/spf13/cast">Cast</a></li>
+<li><a href="https://github.com/spf13/cobra" target="_blank">Cobra</a></li>
+<li><a href="https://github.com/spf13/viper" target="_blank">Viper</a></li>
+<li><a href="https://github.com/spf13/jWalterWeatherman" target="_blank">J Walter Weatherman</a></li>
+<li><a href="https://github.com/spf13/cast" target="_blank">Cast</a></li>
 </ul>
 
-<p>Learn more and contribute on <a href="https://github.com/spf13">GitHub</a>.</p>
+<p>Learn more and contribute on <a href="https://github.com/spf13" target="_blank">GitHub</a>.</p>
 
 <h2 id="setup">Setup</h2>
 
-<p>Some fun facts about <a href="http://gohugo.io/">Hugo</a>:</p>
+<p>Some fun facts about <a href="http://gohugo.io/" target="_blank">Hugo</a>:</p>
 
 <ul>
-<li>Built in <a href="http://golang.org/">Go</a></li>
-<li>Loosely inspired by <a href="http://jekyllrb.com/">Jekyll</a></li>
-<li>Primarily developed by <a href="http://spf13.com/">spf13</a> on the train while commuting to and from Manhattan.</li>
-<li>Coded in <a href="http://vim.org">Vim</a> using <a href="http://vim.spf13.com/">spf13-vim</a></li>
+<li>Built in <a href="http://golang.org/" target="_blank">Go</a></li>
+<li>Loosely inspired by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a></li>
+<li>Primarily developed by <a href="http://spf13.com/" target="_blank">spf13</a> on the train while commuting to and from Manhattan.</li>
+<li>Coded in <a href="http://vim.org" target="_blank">Vim</a> using <a href="http://vim.spf13.com/" target="_blank">spf13-vim</a></li>
 </ul>
 
-<p>Have questions or suggestions? Feel free to <a href="https://github.com/spf13/hugo/issues/new">open an issue on GitHub</a> or <a href="https://twitter.com/spf13">ask me on Twitter</a>.</p>
+<p>Have questions or suggestions? Feel free to <a href="https://github.com/spf13/hugo/issues/new" target="_blank">open an issue on GitHub</a> or <a href="https://twitter.com/spf13" target="_blank">ask me on Twitter</a>.</p>
 
 <p>Thanks for reading!</p>
 
