--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -10,13 +10,13 @@
     <meta name="keywords" content="blog,data science,personal">
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Projetos"/>
-<meta name="twitter:description" content="Em construção&hellip; Aguarde!"/>
+<meta name="twitter:title" content="Projects"/>
+<meta name="twitter:description" content="Nothing to see here&hellip; Move along!"/>
 
 
     <base href="/projects/">
     <title>
-  Projetos · David Dai
+  Projects · David Dai
 </title>
 
     <link rel="canonical" href="/projects/">
@@ -85,10 +85,10 @@
   <section class="container page">
   <article>
     <header>
-      <h1>Projetos</h1>
+      <h1>Projects</h1>
     </header>
 
-    <p>Em construção&hellip; Aguarde!</p>
+    <p>Nothing to see here&hellip; Move along!</p>
 
   </article>
 </section>
@@ -113,8 +113,5 @@
     
 
   </body>
-
-</html>
-ody>
 
 </html>
