--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,13 +10,17 @@
     <meta name="keywords" content="blog,data science,personal">
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Sobre Hugo"/>
-<meta name="twitter:description" content="Em construção&hellip; Aguarde!"/>
+<meta name="twitter:title" content="About Hugo"/>
+<meta name="twitter:description" content="Hugo is a static site engine written in Go.
+It makes use of a variety of open source projects including:
+ Cobra Viper J Walter Weatherman Cast  Learn more and contribute on GitHub.
+Setup Some fun facts about Hugo:
+ Built in Go Loosely inspired by Jekyll Primarily developed by spf13 on the train while commuting to and from Manhattan. Coded in Vim using spf13-vim  Have questions or suggestions?"/>
 
 
     <base href="/about/">
     <title>
-  Sobre Hugo · David Dai
+  About Hugo · David Dai
 </title>
 
     <link rel="canonical" href="/about/">
@@ -85,10 +89,38 @@
   <section class="container page">
   <article>
     <header>
-      <h1>Sobre Hugo</h1>
+      <h1>About Hugo</h1>
     </header>
 
-    <p>Em construção&hellip; Aguarde!</p>
+    
+
+<p>Hugo is a static site engine written in Go.</p>
+
+<p>It makes use of a variety of open source projects including:</p>
+
+<ul>
+<li><a href="https://github.com/spf13/cobra" target="_blank">Cobra</a></li>
+<li><a href="https://github.com/spf13/viper" target="_blank">Viper</a></li>
+<li><a href="https://github.com/spf13/jWalterWeatherman" target="_blank">J Walter Weatherman</a></li>
+<li><a href="https://github.com/spf13/cast" target="_blank">Cast</a></li>
+</ul>
+
+<p>Learn more and contribute on <a href="https://github.com/spf13" target="_blank">GitHub</a>.</p>
+
+<h2 id="setup">Setup</h2>
+
+<p>Some fun facts about <a href="http://gohugo.io/" target="_blank">Hugo</a>:</p>
+
+<ul>
+<li>Built in <a href="http://golang.org/" target="_blank">Go</a></li>
+<li>Loosely inspired by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a></li>
+<li>Primarily developed by <a href="http://spf13.com/" target="_blank">spf13</a> on the train while commuting to and from Manhattan.</li>
+<li>Coded in <a href="http://vim.org" target="_blank">Vim</a> using <a href="http://vim.spf13.com/" target="_blank">spf13-vim</a></li>
+</ul>
+
+<p>Have questions or suggestions? Feel free to <a href="https://github.com/spf13/hugo/issues/new" target="_blank">open an issue on GitHub</a> or <a href="https://twitter.com/spf13" target="_blank">ask me on Twitter</a>.</p>
+
+<p>Thanks for reading!</p>
 
   </article>
 </section>
