--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -10,13 +10,13 @@
     <meta name="keywords" content="blog,data science,personal">
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Contato"/>
-<meta name="twitter:description" content="Me siga em @joaoninguem."/>
+<meta name="twitter:title" content="Contact"/>
+<meta name="twitter:description" content="Follow me, @johndoe."/>
 
 
     <base href="/contact/">
     <title>
-  Contato · David Dai
+  Contact · David Dai
 </title>
 
     <link rel="canonical" href="/contact/">
@@ -85,10 +85,10 @@
   <section class="container page">
   <article>
     <header>
-      <h1>Contato</h1>
+      <h1>Contact</h1>
     </header>
 
-    <p>Me siga em @joaoninguem.</p>
+    <p>Follow me, @johndoe.</p>
 
   </article>
 </section>
