--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
           </li>
         
           <li class="navigation-item">
-            <a class="navigation-link" href="/cv.pdf">CV</a>
+            <a class="navigation-link" href="/DavidDai_CV.pdf">CV</a>
           </li>
         
           <li class="navigation-item">
