--- a/content/projects/2019-06-15-rn-assignment.html
+++ b/content/projects/2019-06-15-rn-assignment.html
@@ -1,7 +1,7 @@
 ---
 title: "St. Michael's Hospital ED Nurse Assignment App"
 author: "David Dai and Neal Kaw"
-date: 'Updated: 2019-06-15'
+date: 2019-06-15
 tags:
 - Shiny
 - healthcare
