Fixed path for Fig 1

--- a/content/projects/2019-06-15-rn-assignment.html
+++ b/content/projects/2019-06-15-rn-assignment.html
@@ -36,7 +36,7 @@ categories: R
 <h1>Web App Design</h1>
 <p>Throughout the design process of the app, the objective was to create a solution that 1) increases workflow efficiency, and 2) automates manual tasks, without minimal disruption to the existing workflow. With this in mind, we implemented four aspects of the scheduling-assignment workflow into the app: 1) maintaining roster of nurses and their qualifications, 2) inputting daily nurse schedule, 3) generating assignments for scheduled nurses, and 4) viewing historical assignments and reporting of historical assignment performance. The workflow implementation is depicted in Figure 1.</p>
 <div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-1"></span>
-<img src="../../public/projects/2019-06-15-rn-assignment_files/ed-rn.jpg" alt="Figure 1. Depiction of scheduling-assignment workflow implementation in the SMH ED Nurse Assignment application."  />
+<img src="/projects/2019-06-15-rn-assignment_files/ed-rn.jpg" alt="Figure 1. Depiction of scheduling-assignment workflow implementation in the SMH ED Nurse Assignment application."  />
 <p class="caption">
 Figure 1: Figure 1. Depiction of scheduling-assignment workflow implementation in the SMH ED Nurse Assignment application.
 </p>
